# claude-tools

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  INSTALL.md  MIGRATION-GUIDE.md  README.md
.findings/: .gitignore  findings.jsonl
.wsr/: config.json  notify.json
.wsr/data/: 2025-W50-entries.json
.wsr/reports/: 2025-W50-standard-20251211-1551.html  2025-W50-standard-20251211-1551.json  2025-W50-standard-20251211-1551.txt  2025-W50-standard-20251211-1603.html  2025-W50-standard-20251211-1603.json  2025-W50-standard-20251211-1603.txt  2025-W50-standard-20251211-1604.html  2025-W50-standard-20251211-1604.json  2025-W50-standard-20251211-1604.txt  2025-W50-standard-20251211-1607.html  2025-W50-standard-20251211-1607.json  2025-W50-standard-20251211-1607.txt  2025-W50-standard-20251211-1608.html  2025-W50-standard-20251211-1608.json  2025-W50-standard-20251211-1608.txt  2025-W50-standard-20251211-1620.html  2025-W50-standard-20251211-1620.json  latest-standard.html  latest-standard.txt
agents/: database-architect.md  devops-engineer.md  security-engineer.md  senior-code-reviewer.md  software-architect.md  unit-test-architect.md
docs/: memory-system-design.md  ultra-agent-README.md  ultra-agent-architecture.md  ultra-agent-file-structure.md  ultra-agent-implementation-phases.md
docs/adr/: ADR-001-ultra-agent.md
scripts/: feature.sh  feature_workflow.py  run_python_tests.sh
skills/: detect-platform.py  skills
skills/architecture-review/: SKILL.md
skills/architecture-review/checklists/: architecture-checklist.md
skills/architecture-review/references/: architecture-patterns.md  dotnet-architecture.md  python-architecture.md
skills/azure-devops/: CLAUDE-global-update.md  README.md  SKILL.md
skills/azure-devops/scripts/: ado_client.py  area_advisor.py  area_analyzer.py  check-prerequisites.py  commit_msg_hook.py  discover-project.py  pyproject.toml  query-work-items.py  query_presets.py  sync_work_items.py  work_item_context.py  work_item_index.py
skills/azure-devops/scripts/tests/: __init__.py  test_commit_msg_hook.py  test_work_item_context.py
skills/code-review/: SKILL.md
skills/code-review/checklists/: csharp-review.md  python-review.md
skills/docgen/: SKILL.md
skills/findings/: SKILL.md
skills/git-worktrees/: README.md  SKILL.md
skills/git-worktrees/scripts/: dependency_handler.py  ide_launcher.py  pyproject.toml  worktree  worktree_manager.py
skills/git-worktrees/scripts/tests/: __init__.py  test_dependency_handler.py  test_ide_launcher.py  test_worktree_manager.py
skills/remote-hosts/: SKILL.md
skills/ssh-vault/scripts/: audit.py  config_sync.py  host_ops.py  inventory.py  key_ops.py  models.py  pyproject.toml  sshv
skills/ssh-vault/scripts/tests/: test_audit.py  test_inventory.py  test_models.py
skills/tla-plus/: DESIGN.md  SKILL.md
skills/tla-plus/scripts/: check_drift.py  explain_counterexample.py  generate_from_code.py  generate_pipeline.py  generate_spec.py  pyproject.toml  run_apalache.py  run_tlc.py  spec_to_tests.py  tla_store.py  validate_spec.py
skills/wsr-generator/: CLAUDE-global-update.md  README.md  SKILL.md
skills/xtconnect-pi/: install.sh
skills/xtconnect-pi/scripts/: check_deployment.py  connect.py  master_image_verify.py  node_context.py  pi_client.py  pyproject.toml  rhost_integration.py  serial_monitor.py  xtpi
skills/xtconnect-pi/scripts/tests/: __init__.py  test_pi_client.py  test_rhost_integration.py
(+71 files in other folders)
